# afft

./: .gitignore  CLAUDE.md  Pipfile  README.md  cleanup.py  export_indexed_data.py  export_raw_data.py  format_cameras.py  format_messages.py  main.py  parse_log.py  process_poses.py  pyproject.toml  run_cleanup.py  run_transfer.py  setup.py  transfer.py
.github/workflows/: ci.yml  pylint.yml  ubuntu.yml
adapters/archipelago/: __init__.py  format.py  query.py
adapters/local/: __init__.py  query.py
auvtools/camera/: camera.py  (+4 more)
cache/: qdc5ghs3_00_include_files.txt  qdc5ghs3_01_include_files.txt  qdc5ghs3_02_include_files.txt  qdc5ghs3_03_include_files.txt  qdch0ftq_00_include_files.txt  qdch0ftq_01_include_files.txt  qdch0ftq_02_include_files.txt  qdch0ftq_03_include_files.txt  qdch0ftq_04_include_files.txt  qdch0ftq_05_include_files.txt  qdch0ftq_06_include_files.txt
config/: acfr_deployments.toml  config-default.toml  config-dev.toml  config-telemetry-default.toml  config-telemetry-dev.toml  copy_scr_01.ini  copy_tas_01.ini  copy_was_01.ini  copy_was_02.ini  copy_was_03.ini  default.toml  deployment_configs_all.toml  deployment_configs_selected.toml  scr_scott_reef.ini  sensor_usbl_uncertainty.toml  seq_henderson.ini  seq_henderson_01.ini  seq_henderson_02.ini  tas_01.ini  tas_02.ini  tas_03.ini  telemetry_config_default.toml  telemetry_config_dev.toml  template.ini  todo_tas_01.ini  todo_tas_02.ini  todo_was_01.ini  todo_was_02.ini  todo_was_03.ini  was_01.ini  was_02.ini  was_03.ini
data/: qdch0ftq_20100428_020202_camera_pairs.csv  qdch0ftq_20110415_020103_camera_pairs.csv  qdch0ftq_20120430_002423_camera_pairs.csv  qdch0ftq_20130406_023610_camera_pairs.csv  qdchdmy1_20110416_005411_camera_pairs.csv  qdchdmy1_20120501_071203_camera_pairs.csv  qdchdmy1_20130406_081713_camera_pairs.csv  qdchdmy1_20170525_234624_camera_pairs.csv  r23685bc_20100605_021022_camera_pairs.csv  r23685bc_20120530_233021_camera_pairs.csv  r23685bc_20140616_225022_camera_pairs.csv  r29mrd5h_20090612_225306_camera_pairs.csv  r29mrd5h_20110612_033752_camera_pairs.csv  r29mrd5h_20130611_002419_camera_pairs.csv  r7jjskxq_20101023_210332_camera_pairs.csv  r7jjskxq_20121013_060425_camera_pairs.csv  r7jjskxq_20131022_004934_camera_pairs.csv  wrong_camera_pairs.csv
notebooks/: camera_process_debug.ipynb  convert_deployment_ingest_table_to_entries.ipynb  correct_pressure_sensor_values.ipynb  dev_ecopuck_messages.ipynb  dev_evologics_messages.ipynb  dev_message_parser.ipynb  export_camera_metadata.ipynb  export_database_tables.ipynb  export_labels.ipynb  fetch_irradiance_data.ipynb  fetch_sealevel_data.ipynb  ingest_camera_metadata.ipynb  ingest_camera_priors.ipynb  merge_renav_and_squidle_cameras.ipynb  message_database_ingestion.ipynb  parse_deployment_time.ipynb  update_site_indices.ipynb
resources/: example.json  example.toml  example.yaml
scripts/: batch_cleanup.sh  batch_transfer.sh  batch_transfer_cameras.sh  batch_transfer_images_proc.sh  batch_transfer_measurements.sh  batch_transfer_processed.sh  batch_transfer_processed_images.sh  batch_transfer_processed_images_01.sh  batch_transfer_processed_images_02.sh  batch_transfer_raw.sh  batch_transfer_raw_images.sh  create_reference.sh  create_references.sh  dev_cleanup.sh  invoke_export_jobs.sh  test_message_parser.sh  transfer_processed_data.sh  transfer_processed_images.sh
tests/: test_grouping.py  test_logger.py  test_template.py
tools/: rclone_wrapper.py  transfer.py  transfer_acfr.py  transfer_search_objects.py  utils.py
(+465 files in other folders)
