[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "afft"
version = "0.0.1"
description = "Toolbox for formatting files from the Austrialian Centre of Field Robotics autonomous underwater vehicles."
authors = ["Martin Kvisvik Larsen <martin.kvisvik.larsen@hotmail.com>"]
readme = "README.md"
packages = [{include = "afft", from="src"}]
package-mode = true


[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"
h5py = "^3.11.0"
loguru = "^0.7.2"
msgspec = "^0.18.6"
numpy = "^1.26.4"
pandas = "^2.2.2" # Needed by plotly express
polars = "^0.20.26"
pyarrow = "^17.0.0" # Needed by polars to write to databases
python-dotenv = "^1.0.1"
python-rclone = "*"
result = "^0.16.1"
sqlalchemy = "^2.0.34"
tqdm = "^4.66.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}
jupyter = "^1.0.0"
pytest = "^8.2.0"
ruff = "^0.6.4"

[tool.poetry.scripts]
afft = "afft.cli.entrypoint:main"
