[project]
name = "afft"
version = "0.1.0"
description = "A toolbox for working with data files from ACFRs AUVs."
readme = "README.md"
authors = [
    { name = "Martin Kvisvik Larsen", email = "martin.kvisvik.larsen@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.4.0",
    "geopandas>=1.1.1",
    "loguru>=0.7.3",
    "lonboard>=0.16.0",
    "matplotlib>=3.10.6",
    "msgspec>=0.19.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars[numpy,pandas,pyarrow]>=1.30.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pymap3d>=3.2.0",
    "python-dotenv>=1.1.0",
    "python-rclone>=0.0.2",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.41",
    "tomli-w>=1.2.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afft"]

[project.scripts]
afft = "afft.cli.entrypoint:main"

[tool.uv]
package = true

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 80

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
plotting = [
    "matplotlib>=3.10.6",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
]
